gcc/testsuite/rust/rustc/ui/feature-gate/issue-43106-gating-of-test.rs
// The non-crate level cases are in issue-43106-gating-of-builtin-attrs.rs.

#![test                    = "4200"]
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

